--- a/Mission05/Views/Home/Index.cshtml
+++ b/Mission05/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Home";
 }
 <br /><br /><br />
+
+@* import first photo *@
 <div class="container text-center">
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -12,6 +14,7 @@
     </div>
 </div>
 
+@* create a downloadable pdf of my resume *@
 <div class="container text-center">
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -22,6 +25,7 @@
     </div>
 </div>
 
+@* pull in my other photo and write a paragraph about it *@
 <div class="container text-center">
     <div class="row justify-content-center">
         <div class="col-md-6">
