--- a/Mission05/Views/Home/Requests.cshtml
+++ b/Mission05/Views/Home/Requests.cshtml
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="~/css/FormStyles.css" asp-append-version="true" />
 
 <br /><br /><br />
+
+@* making my calculater. see site.js for javascript the controls this *@
 <div class="container">
     <h2>Request Swimming Lessons</h2>
 
